--- a/docs/assets/site.css
+++ b/docs/assets/site.css
@@ -15,6 +15,18 @@
   padding-right: 24px;
 }
 
+#header_wrap .inner,
+#main_content_wrap .inner,
+#main_content {
+  max-width: none;
+  width: 100%;
+}
+
+#main_content_wrap,
+.outer {
+  width: 100%;
+}
+
 .page {
   display: grid;
   grid-template-columns: minmax(200px, var(--toc-width)) 1fr;
