--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,9 +26,11 @@
       <section id="main_content" class="inner">
         <div class="page">
           <aside class="toc" aria-label="Pages">
-            <div class="toc__nav">
-              <a class="toc__home" href="{{ '/' | relative_url }}">← Back to main</a>
-            </div>
+            {% if page.url != '/' and page.url != '/index.html' %}
+              <div class="toc__nav">
+                <a class="toc__home" href="{{ '/' | relative_url }}">← Back to main</a>
+              </div>
+            {% endif %}
             <div class="toc__title">Pages</div>
             <nav>
               <ul class="toc__list">
