--- a/docs/assets/site.css
+++ b/docs/assets/site.css
@@ -67,13 +67,17 @@
 }
 
 .toc__nav {
-  margin-bottom: 10px;
+  margin-bottom: 16px;
 }
 
 .toc__home {
   color: var(--toc-link);
   text-decoration: none;
   font-size: 0.95rem;
+}
+
+.toc__title {
+  margin-top: 6px;
 }
 
 .toc__home:hover,
