--- a/docs/assets/site.css
+++ b/docs/assets/site.css
@@ -128,6 +128,10 @@
   margin: 18px 0 14px;
 }
 
+.content {
+  text-align: justify;
+}
+
 #project_description {
   margin-top: 6px;
   color: #d5d9e5;
