--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/site.css' | relative_url }}">
   </head>
-  <body>
+  <body{% if page.url == '/' or page.url == '/index.html' %} class="home-page"{% endif %}>
     <div id="header_wrap" class="outer">
       <header class="inner">
         {% if site.title %}
