Justify and hyphenate on smaller screens

--- a/docs/assets/site.css
+++ b/docs/assets/site.css
@@ -306,7 +306,10 @@ body {
   }
 
   .content {
-    text-align: left;
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
   }
 
   .page-title {
