--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -58,5 +58,6 @@
       </section>
     </div>
     <script src="{{ '/assets/toc.js' | relative_url }}" defer></script>
+    <script src="{{ '/assets/artwork-lightbox.js' | relative_url }}" defer></script>
   </body>
 </html>
